tests/fixtures/guardrails/valid/app/routes/products.d.ts
import type { JobState } from "@prisma/client";

export type DemoRouteLoaderData = JobState;
