tests/fixtures/guardrails/invalid/webhook-direct-admin-access/app/routes/webhooks.app.uninstalled.ts
import { adminClient } from "~/platform/shopify";

export async function action() {
  return adminClient;
}
